# GAT-Recommendation

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  EXECUTIVE_SUMMARY.md  GRAPH_TRANSFORMER_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_COMPLETE.md  PROJECT_BRIEF.md  QUICK_REFERENCE.md  README.md  cloudbuild-onnx.yaml  cloudbuild-pytorch.yaml  cloudbuild.yaml  dvc.yaml  mypy.ini  params.yaml  pyproject.toml  requirements-serve-onnx.txt  requirements-serve.txt  requirements.txt  submit_all_jobs.sh  submit_graph_transformer_optimized.sh  test_models.py  train_graph_transformer_optimized_local.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yaml  ci.yaml  deploy.yaml  release.yaml  train_vertex.yaml
configs/: ablations.yaml  quality_thresholds.yaml  yoochoose_baselines.yaml  yoochoose_etpgt_small.yaml
docker/: serve-onnx.Dockerfile  serve.Dockerfile  train.Dockerfile
docs/: ATTRIBUTION_NOTES.md  BUGFIX_DOCKER_ENTRYPOINT.md  DATA_CONTRACT.yaml  DATA_PIPELINE.md  DECISIONS.md  DEPLOYMENT.md  DESIGN_RATIONALE.md  EXPERIMENTS.md  GCP_OIDC_SETUP.md  GCP_SETUP_GUIDE.md  GOVERNANCE.md  GRAPH_TRANSFORMER_OPTIMIZATION.md  MODELS.md  MODEL_CARD.md  PARAMETERS.md  PHASE_0_CHECKLIST.md  PHASE_0_SUMMARY.md  PHASE_1_CHECKLIST.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PRD.md  REPRO.md  RESULTS.md  RISK_REGISTER.md  TRAINING_SUMMARY.md  VERTEX_AI_LATENCY_ANALYSIS.md
docs/architecture/: C1_CONTEXT.md  C2_CONTAINER.md  C3_COMPONENT.md  C4_CODE.md
etpgt/: __init__.py
etpgt/cli/: __init__.py
etpgt/encodings/: __init__.py  hybrid_pe.py  laplacian_pe.py  path_encoding.py  temporal_encoding.py
etpgt/explain/: __init__.py
etpgt/loss/: __init__.py
etpgt/model/: __init__.py  base.py  etpgt.py  gat.py  graph_transformer.py  graph_transformer_optimized.py  graphsage.py
etpgt/samplers/: __init__.py  temporal_path_sampler.py
etpgt/serve/: __init__.py
etpgt/serving/: __init__.py  app.py  config.py  recommender.py  schemas.py  validation.py
etpgt/train/: __init__.py  dataloader.py  losses.py  trainer.py
etpgt/utils/: __init__.py  io.py  logging.py  metrics.py  profiler.py  seed.py
infra/: main.tf  outputs.tf  terraform.tfvars  variables.tf
notebooks/: session_recsys_walkthrough.ipynb
outputs/graph_transformer_optimized_local/: args.json
outputs/test_graph_transformer/graph_transformer/: history.json
scripts/: evaluate_local.py  smoke_test_all_models.py
scripts/data/: 00_generate_synthetic_data.py  01_download_retailrocket.py  02_sessionize.py  03_temporal_split.py  04_build_graph.py
scripts/gcp/: 00_validate_env.sh  01_bootstrap.sh  02_build_training_image.sh  02_build_training_image_cloudbuild.sh  03_submit_training_job.sh  04_submit_etpgt_job.sh  04_upload_model_artifacts.sh  05_register_vertex_model.py  06_deploy_endpoint.py  07_benchmark_endpoint.py  08_analyze_ab_results.py  deploy_vertex_endpoint.sh
scripts/pipeline/: __init__.py  export_onnx.py  mlflow_experiment.py  model_quality_gate.py  run_full_pipeline.py
scripts/serve/: app.py  vertex_app.py
scripts/train/: train_baseline.py  train_etpgt.py
tests/: __init__.py  conftest.py  test_ablations.py  test_contracts.py  test_encodings.py  test_losses.py  test_models.py  test_sampler.py  test_serving.py  test_splits.py  test_utils.py
tests/serving/: test_recommender.py  test_validation.py
